Create PCA & plotting functions

--- a/faces_notebook.ipynb
+++ b/faces_notebook.ipynb
@@ -54,37 +54,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_photos(n_pixels):\n",
+    "def load_photos():\n",
     "    photo_list = os.listdir('img')\n",
     "    photo_list = [p for p in photo_list if p != '.DS_Store']\n",
-    "    \n",
-    "    pic = imageio.imread('img/{}'.format(photo_list[0]))\n",
-    "    \n",
     "    n_samples = len(photo_list)\n",
-    "    g56faces = np.zeros((n_samples, 450*450))\n",
+    "    pic = imageio.imread('img/{}'.format(photo_list[0]))\n",
+    "    (length, width) = pic.shape\n",
+    "    faces = np.zeros((n_samples, length*width))\n",
     "\n",
-    "    for i, photo in enumerate(photos):\n",
+    "    for i, photo in enumerate(photos[1:]):\n",
     "        pic = imageio.imread('img/{}'.format(photo))\n",
     "        pic = rgb2gray(pic)\n",
     "        pic = pic.flatten()\n",
-    "        g56faces[i] = pic"
+    "        faces[i] = pic\n",
+    "        \n",
+    "    # Global centering\n",
+    "    faces_centered = faces - faces.mean(axis=0)\n",
+    "    # Center the columns\n",
+    "    faces_centered -= faces_centered.mean(axis=1).reshape(n_samples, -1)\n",
+    "    return faces_centered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Global centering\n",
-    "faces_centered = g56faces - g56faces.mean(axis=0)\n",
-    "# Center the columns\n",
-    "faces_centered -= faces_centered.mean(axis=1).reshape(n_samples, -1)"
+    "def plot_eigenfaces(faces_centered, image_shape, subplot_dim):\n",
+    "    faces_pcd = PCA().fit(faces_centered)\n",
+    "\n",
+    "    fig, axs = plt.subplots(subplot_dim[0], subplot_dim[1], figsize=(12, 6))\n",
+    "\n",
+    "    for ax, i in zip(axs.flatten(), range(subplot_dim[0]*subplot_dim[1])):\n",
+    "        eigenface = faces_pcd.components_[i, :].reshape(image_shape)\n",
+    "        ax.imshow(eigenface, cmap=plt.cm.gray)\n",
+    "        ax.set_title(\"{}'th Eigenface\".format(i))\n",
+    "        ax.set_xticks(())\n",
+    "        ax.set_yticks(())\n",
+    "\n",
+    "    fig.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -133,56 +156,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 50\n",
-    "faces_pcd = PCA().fit(faces_centered)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6, 202500)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "faces_centered.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6, 202500)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "faces_pcd.components_.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 226,
    "metadata": {},
    "outputs": [
@@ -198,16 +171,8 @@
     }
    ],
    "source": [
-    "fig, axs = plt.subplots(2, 3, figsize=(12, 6))\n",
     "\n",
-    "for ax, i in zip(axs.flatten(), range(6)):\n",
-    "    eigenface = faces_pcd.components_[i, :].reshape(image_shape)\n",
-    "    ax.imshow(eigenface, cmap=plt.cm.gray)\n",
-    "    ax.set_title(\"{}'th Eigenface\".format(i))\n",
-    "    ax.set_xticks(())\n",
-    "    ax.set_yticks(())\n",
-    "    \n",
-    "fig.tight_layout()"
+    "\n"
    ]
   },
   {
